(lang dune 2.9)

(name lev)

(generate_opam_files true)

(license ISC)
(maintainers "Rudi Grinberg <me@rgrinberg.com>")
(authors "Rudi Grinberg <me@rgrinberg.com>")
(source (github rgrinberg/lev))

(implicit_transitive_deps false)

(package
 (synopsis "bindings to libev")
 (description "low level bindings to libev")
 (name lev))
