(copy_files# ../vendor/*.c)

(copy_files# ../vendor/{ev,ev_vars,ev_wrap}.h)

(library
 (public_name lev)
 (synopsis "libev bindings")
 (libraries unix)
 (instrumentation
  (backend bisect_ppx))
 (foreign_stubs
  (language c)
  (flags :standard -libm)
  (extra_deps
   ev_kqueue.c
   ev_epoll.c
   ev_iouring.c
   ev_poll.c
   ev_port.c
   ev_select.c
   ev_win32.c)
  (names lev_stubs ev)))
